[package]
name = "yew-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
wasm-bindgen = "0.2"
gloo-storage = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]